--- a/src/styles/mediaQuery.css
+++ b/src/styles/mediaQuery.css
@@ -1,68 +1,66 @@
 @media screen and (max-width: 820px) {
-   
-  
-    .login ,.signin > main {
-      height: 100vh;
+  .signin > main {
+    height: 100vh;
+    width: 100%;
+    border-radius: 0%;
+    h1 {
+      text-align: center;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  nav {
+    > h1 {
+      display: none;
+    }
+    > main {
+      width: 100%;
+      justify-content: center;
+      a {
+        margin: 0.5rem;
+      }
+    }
+  }
+  .imgDiv {
+    display: none;
+  }
+
+  .signin > main {
+    padding: 1rem;
+    h1 {
+      margin: 1rem;
+    }
+    > form {
+      margin: 0%;
+      > div {
+        width: 100%;
+      }
+    }
+  }
+
+  footer {
+    height: 50vh;
+    grid-template-columns: 1fr;
+    padding: 5rem;
+    > div {
+      align-items: center;
+    }
+  }
+}
+
+@media screen and (max-width: 922px) {
+  .loginContainer {
+    & > main {
+      height: 100%;
       width: 100%;
       border-radius: 0%;
-      h1 {
-        text-align: center;
-      }
-    }
-  }
-
-
-  @media screen and (max-width: 700px) {
-    nav {
-      > h1 {
+      .imgDiv {
         display: none;
       }
-      > main {
-        width: 100%;
-        justify-content: center;
-        a {
-          margin: 0.5rem;
-        }
-      }
-    }
-  
-    
-
-.contact,.signin > main {
-  padding: 1rem;
-  h1 {
-    margin: 1rem;
-  }
-  > form {
-    margin: 0%;
-    > div {
-      width: 100%;
     }
   }
 }
 
-footer {
-  height: 50vh;
-  grid-template-columns: 1fr;
-  padding: 5rem;
-  > div {
-    align-items: center;
-  }
+@media screen and (max-width: 700) {
 }
-}
-
-
-/* #div{
-  >main{
-    width 100%
-    border-radius: 0;
-    .signin>h1{
-      text-align: center;
-
-    }
-  }
-  signup> form 
-  margin: 1rem;
-  signup>form>div>
-  gap 1rem
-} */
