--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,61 +1,79 @@
-.signup{
-    width:100%;
-    height: 100vh;
-    background-color: #090c31;
-    margin-top: 1rem;
+.signup {
+  width: 100%;
+  height: 100vh;
+  background-color: #090c31;
+  margin-top: 1rem;
 
-    >main{
-        background-color: aliceblue;
-        width: 80%;
-        /* padding: 3rem; */
-        height: 34rem;
-        border-radius: 0 200px 0px 200px;
-        >h1{
-    padding: 40px 0 0 40px; 
-        }
-        >form{
-            margin: 5rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-
-
-            >div{
-                height: 3rem;
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-                width:85%;
-                margin: 0.5rem;
-
-                >label{
-                    width: 20%;
-                    margin: 0 1rem;
-                }
-                >input{
-                    align-self: stretch;
-                    width: 80%;
-                    padding: 1rem;
-                    border-radius: 5px;
-                    border: 1px solid rgba(123, 123, 123, 0.6);
-                    outline: none;
-                }
-            }
-            >button{
-                margin: 3rem 0;
-                padding: 0.7rem;
-                border: none;
-                border-radius: 5px;
-                background-color: #5853ff;;
-                color:#FFFFFF;
-                width: 200px;
-                font: 500 1rem "Roboto" ;
-                
-            }
-            >button:hover{
-                opacity: 0.9;
-            }
-        }
+  > main {
+    background-color: aliceblue;
+    width: 80%;
+    /* padding: 3rem; */
+    height: 34rem;
+    border-radius: 0 200px 0px 200px;
+    > h1 {
+      padding: 40px 0 0 40px;
     }
+    > form {
+      margin: 5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      > div {
+        height: 3rem;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        width: 85%;
+        margin: 0.5rem;
+
+        > label {
+          width: 20%;
+          margin: 0 1rem;
+        }
+        > input {
+          align-self: stretch;
+          width: 80%;
+          padding: 1rem;
+          border-radius: 5px;
+          border: 1px solid rgba(123, 123, 123, 0.6);
+          outline: none;
+        }
+      }
+      > button {
+        margin: 3rem 0;
+        padding: 0.7rem;
+        border: none;
+        border-radius: 5px;
+        background-color: #5853ff;
+        color: #ffffff;
+        width: 200px;
+        font: 500 1rem "Roboto";
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        justify-content: center;
+        cursor: pointer;
+      }
+      > button:hover {
+        opacity: 0.9;
+      }
+    }
+  }
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 10px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid;
+  border-color: #fff #0000;
+  animation: l1 1s infinite;
+}
+@keyframes l1 {
+  to {
+    transform: rotate(0.5turn);
+  }
 }
