--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -32,7 +32,7 @@
       > form {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
 
         > .heading {
           gap: 0.3rem;
@@ -62,15 +62,42 @@
             border: 1px solid rgba(123, 123, 123, 0.6);
             outline: none;
           }
+          > .passwordInput {
+            position: relative;
+            /* padding-right: 1rem; */
+
+            > input {
+              align-self: stretch;
+              padding: 1rem;
+              border-radius: 5px;
+              border: 1px solid rgba(123, 123, 123, 0.6);
+              outline: none;
+              width: 100%;
+              padding-right: 3rem;
+            }
+            > .iconBtn {
+              display: flex;
+              cursor: pointer;
+              align-items: center;
+              height: 70%;
+              justify-content: center;
+              position: absolute;
+              right: 0;
+              top: 0;
+              padding: 1rem;
+              font-size: 1rem;
+              background-color: transparent;
+              border: 0;
+            }
+          }
         }
         > button {
-          margin: 3rem 0;
           padding: 0.7rem;
           border: none;
           border-radius: 5px;
           background-color: #a480f2;
           color: #ffffff;
-          width: 200px;
+          /* width: 200px; */
           font: 500 1rem "Roboto";
           display: flex;
           align-items: center;
