--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -1,63 +1,81 @@
-.signup {
-  width: 100%;
+.signupContainer {
   height: 100vh;
-  background-color: #090c31;
-  margin-top: 1rem;
+  width: 100%;
+  background-color: #a480f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   > main {
-    background-color: aliceblue;
-    width: 80%;
-    /* padding: 3rem; */
-    height: 34rem;
-    border-radius: 0 200px 0px 200px;
-    > h1 {
-      padding: 40px 0 0 40px;
-    }
-    > form {
-      margin: 5rem;
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    background-color: #ffffff;
+    padding: 5rem;
+    border-radius: 30px;
+    height: 90%;
+    width: 90%;
+
+    > .formContainer {
+      height: 80%;
+      flex: 1;
+      gap: 1rem;
+      padding: 1rem;
+      background-color: #ffffff;
+      border-radius: 15px;
+      box-shadow: 7px 7px 14px #e3e3e3, -7px -7px 14px #ffffff;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      height: 100%;
 
-      > div {
-        height: 3rem;
+      > form {
         display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        width: 85%;
-        margin: 0.5rem;
+        flex-direction: column;
+        gap: 1rem;
 
-        > label {
-          width: 20%;
-          margin: 0 1rem;
+        > .heading {
+          gap: 0.3rem;
+          display: flex;
+          flex-direction: column;
         }
-        > input {
-          align-self: stretch;
-          width: 80%;
-          padding: 1rem;
+
+        > div {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          /* gap: 0.4rem;  */
+
+          > label {
+            font: 500 1rem "Roboto";
+            margin-left: 4px;
+          }
+          > input {
+            align-self: stretch;
+            padding: 1rem;
+            border-radius: 5px;
+            border: 1px solid rgba(123, 123, 123, 0.6);
+            outline: none;
+          }
+        }
+        > button {
+          /* margin: 3rem 0; */
+          padding: 0.7rem;
+          border: none;
           border-radius: 5px;
-          border: 1px solid rgba(123, 123, 123, 0.6);
-          outline: none;
+          background-color: #a480f2;
+          color: #ffffff;
+          /* width: 200px; */
+          font: 500 1rem "Roboto";
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          justify-content: center;
+          cursor: pointer;
         }
-      }
-      > button {
-        margin: 3rem 0;
-        padding: 0.7rem;
-        border: none;
-        border-radius: 5px;
-        background-color: #5853ff;
-        color: #ffffff;
-        width: 200px;
-        font: 500 1rem "Roboto";
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        justify-content: center;
-        cursor: pointer;
-      }
-      > button:hover {
-        opacity: 0.9;
+        > button:hover {
+          opacity: 0.9;
+        }
       }
     }
   }
